# KlipperSetupHelper

./: KlipperSetupHelper.service  README.md  ksh_install.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml  build.rs
backend/src/: api.rs  hosting.rs  main.rs
backend/src/api/: ksh.rs
frontend/: .gitignore  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: KlipperScreenSetting.tsx  NameSetting.tsx
